# Ant

./: .gitignore  AUTHORS  LICENSE  README  README.md  flake.nix  main.py  pyproject.toml
experiments/: DCOP_experiment.ipynb  agent_experiments.ipynb  decentralised_optimal_allocation.ipynb  demo_experiment.ipynb  experiment_1.ipynb  greedy-vs-proportional.ipynb  large_async_network_market_loss.ipynb  large_network_market_loss.ipynb  large_network_market_score.ipynb  large_seq_network_market_loss.ipynb  large_seq_network_market_score.ipynb  large_sync_network_market_loss.ipynb  large_sync_network_market_score.ipynb  neighbour_experiment.ipynb  paper_experiments_large_network copy.ipynb  paper_experiments_large_network.ipynb  paper_experiments_small_network.ipynb  poster_figures.ipynb  scratchpad.ipynb  small_async_network_market_loss.ipynb  small_network_market_loss.ipynb  small_network_market_score.ipynb  small_seq_network_market_loss.ipynb  small_seq_network_market_score.ipynb  small_sync_network_market_loss.ipynb  submarket_experiment.ipynb  submarkets.ipynb
experiments/max_eradus/: 01_2_comparison_Pure_strategies.ipynb  01_comparison_Pure_strategies.ipynb  02_1_pure_mix_strats.ipynb  02_2_pure_mix_strats.ipynb  03_01_homogeneous_strats.ipynb  03_0_homogeneous_strats.ipynb  03_1_homogeneous_strats.ipynb  03_2_homogeneous_strats.ipynb  03_3_homogeneous_strats.ipynb  04_1_heterogeneous_strat copy.ipynb  04_1_heterogeneous_strat.ipynb  04_2_heterogeneous_strats.ipynb  04_3_heterogeneous_strat.ipynb  agent_experiments.ipynb  (+2 more)
src/: __init__.py
tests/: test_direct.py
(+19 files in other folders)
