[project]
name = "ant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "networkx",
    "pytest"
]

[build-system]
requires = ["uv_build >= 0.11.7, <0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
pythonpath = ["src/ant", "tests"]
testpaths = ["tests"]