[project]
name = "ant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "cvxpy>=1.8.2",
    "ipython>=9.13.0",
    "jupyterlab>=4.5.6",
    "matplotlib>=3.10.9",
    "networkx",
    "notebook>=7.5.5",
    "numpy>=2.4.4",
    "pytest",
    "ruff>=0.15.12",
    "scipy>=1.17.1",
]

[build-system]
requires = ["uv_build >= 0.11.7, <0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
pythonpath = ["src/ant", "tests"]
testpaths = ["tests"]
